--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
 	    	<h2>Spectacular</h2>
 	    	<hr>
 	    	<p>Sometimes we have to pick ourselves up and make our own way</p>
+        <p>Uploading New Files</p>
 	    </div>
     </div>
     <div id="gets">
