--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>About Me</title>
+    <title>Generic Programming</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -19,14 +19,11 @@
     <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="css/mystyles.css"type="text/css" rel="stylesheet">
-
     <link href="jumbotron.css" rel="stylesheet">
-    <!-- It's a link to Font's and icons -->
-    <link href='https://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="fonts/font-awesome/css/font-awesome.min.css">
-
+    <link href="css/mystyles.css"rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+    <!-- Font Awesome Link -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -45,87 +42,97 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Pak Cashier</span>
+            <span class="sr-only">Generics</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Pak Cashier</a>
+          <a class="navbar-brand" href="#">Mouse</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse navbar-right">
           <ul class="nav navbar-nav">
-            <li><a href="#spec">Spectacular</a></li>
-            <li><a href="#gets">GetStarted</a></li>
-            <li><a href="https://docs.google.com/forms/d/1alY0AimZN59TfcbW8id9THTdioGuGp2khsXrS6wqIB0/viewform" target="_blank">Contact</a></li>
+            <li><a href="#">Home!</a></li>
+            <li><a href="#specs">Spectacular</a></li>
+            <li><a href="#gits">info!</a></li>
+            <li><a href="#footcolor">Help</a></li>
+            <li><a href="#footer">Contact</a></li>
           </ul>
+          <a href="https://docs.google.com/forms/d/1rX-EVxvED3xcdFjjzlgGOQpaBGA0EnQzhzT0kH7glCA/viewform" target="_blank"><button class="btn btn-danger">Searching</button></a>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
-      <div class="container ">
-
-        <h1>Pak Cashier!</h1>
-        <p>Due to the absense of PayPal in Pakistan, We have developed this website to help with transactions. This Project is Fully trusted and Autonomous, Create Escrows, deposit money in the bank, have a Good Life!</p>
+      <div class="container" id="hithere">
+        <h1>Hi, There!</h1>
+        <p>I am coding a site, my first site without any help, hope it's good enough to impress somebodies out there.</p>
         <p><a class="btn btn-danger btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
-    <div id="spec">
-	    <div class="container homepage">
-	    <img src="images/Batman-vs-Superman.png" alt="unthinkable" title="Spectacular" />
-	    	<h2>Spectacular</h2>
-	    	<hr>
-	    	<p>Sometimes we have to pick ourselves up and make our own way</p>
-        <p>Uploading New Files</p>
-	    </div>
+    <div class="container homepage" id="specs">
+      <img src="image/Batman-vs-Superman.png" alt="unthinkable" title="Spectacular" />
+      <h2>Spectacular</h2>
+      <hr>
+      <p>Dawn of Justice, low-Rated movie, lets see how's this actually,waiting for original result</p>
     </div>
-    <div id="gets">
-    <div id="hopsy">
-     <div class="container homepage">
-	      <!-- Example row of columns -->
-	      <h2>Get Started</h2>
-	      <hr>
-	      <div class="row">
-	       <div class="col-md-4">
-	        
-			 <span class="fa-stack fa-4x">
-			  <i class="fa fa-circle fa-stack-2x"></i>
-			  <i class="fa fa-user fa-stack-1x fa-inverse"></i>
-			</span>
-	          <h3>Our Moto</h3>
-	          <p>Our Moto is to give facilities to those <span class="incr">USERS</span> who can't get benifits of Paypal, Users create accounts and do buisness on this site like no <span class="incr"> <br/>Other</span> </p>
-	          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-	        </div>
-	        <div class="col-md-4">
-	        <span class="fa-stack fa-4x">
-			  <i class="fa fa-circle fa-stack-2x"></i>
-			  <i class="fa fa-university fa-stack-1x fa-inverse"></i>
-			</span>
-	          <h3>Escrows</h3>
-	          <p>Escrow Means a <span class="incr">bridge</span> on money between you and your client. a User sends his money to 
-	          reciever, but reviever can't get money until you provide that user with <span class="incr"> key</span> </p>
-	          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-	       </div>
-	        <div class="col-md-4">
-	        <span class="fa-stack fa-4x">
-			  <i class="fa fa-circle fa-stack-2x"></i>
-			  <i class="fa fa-money fa-stack-1x fa-inverse"></i>
-			</span>
-	          <h3>Deposits</h3>
-	          <p>User can <span class="incr">withdraw</span> his money from the website and deposit it in the <span class="incr">bank</span>. Do visit it, pratice it. Em awaiting for your tips. It's completely safe and <span class="incr">reliable</span></p>
-	          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-	        </div>
-	      </div>
-	   </div> <!-- /container -->
-   </div>
-   </div>
+    <!-- Awesome Table Below -->
+    <div id="gits">
+        <div class="container homepage">
+        <h2>Get Started</h2>
+        <hr>
+          <!-- Example row of columns -->
+          <div class="row">
 
-      <footer>
-      <div class="container">
-        
-      </div>
-      </footer>
+            <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-gitlab fa-stack-1x fa-inverse" aria-hidden="true"></i>
+            </span>
+              <h3>Our Moto</h3>
+              <p>I Want to be a <span class="log">Scientist</span>. I Have to work hard to get what i wan't. 
+              O My <span class="log">Allah!</span> Please Help me with what i want. </p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
+            <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-battery-quarter fa-stack-1x fa-inverse" aria-hidden="true"></i>
+            </span>
+              <h3>Scientific</h3>
+              <p>I want to <span class="log">help</span> people, people with <span class="log">dissabilities</span>. I Want to invent something. Well, i can try hard and get somewhere away.</p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+           </div>
+            <div class="col-md-4">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x"></i>
+              <i class="fa fa-bullhorn fa-stack-1x fa-inverse" aria-hidden="true"></i>
+
+            </span>
+              <h3>Awesome</h3>
+              <p>i am <span class="log">Awesome</span>. I can do anything with a little will and courage. I need some help though!. Is There anybody??</p>
+              <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            </div>
+          </div>
+     </div> <!-- /container -->
+ </div>
+ <div id="footcolor">
+   <div class="container">
+     <div class="innerfoot">
+        <span class="fa-spin fa-5x">
+          <i class="fa fa-spinner fa-pulse fa-3x fa-fw margin-bottom"></i>
+        </span>
+
+        <h2>I can help you!</h2>
+     </div>
+   </div>
+ </div>
+ <footer id="footer">
+   <span class="fa-4x">
+     <i class="fa fa-mobile fa-4x"></i> 
+   </span>
+   <h2>Feel free to call, Email on <span class="log">sparowsmark@gmail.com</span></h2>
+ </footer>
  
 
 
@@ -137,5 +144,6 @@
     <script src="js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+
   </body>
 </html>
